<resources>
    <string name="app_name">CloudSpill</string>
    <string name="starting">Starting up...</string>

    <!-- button labels -->
    <string name="sync">Sync</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="pref_server">Server address</string>
    <string name="pref_server_summ">Example: http://192.168.3.4/</string>
    <string name="pref_server_default">http://</string>

    <string name="pref_user">Username</string>
    <string name="pref_user_summ">The user to use when connecting to the server</string>
    <string name="pref_user_default">guest</string>

    <string name="pref_folder">Folder name</string>
    <string name="pref_folder_summ">Choose a name to describe the folder on this device</string>
    <string name="pref_folder_default">folder</string>

    <string name="pref_folder_path">Folder path</string>
    <string name="pref_folder_path_summ">Location on this device to scan for new media</string>
    <string name="pref_folder_path_default">/storage/emulated/0/DCIM</string>

    <string name="pref_dl_path">Download path</string>
    <string name="pref_dl_path_summ">Where to place downloaded media</string>
    <string name="pref_dl_path_default">/storage/emulated/0/CloudSpill</string>

    <string name="pref_freespace">Free space</string>
    <string name="pref_freespace_summ">When free space gets lower than that, CloudSpill starts deleting files</string>
    <string name="pref_freespace_default">1000M</string>

    <string name="title_activity_folders">Folders</string>
    <string name="folder_name_hint">Folder name</string>
    <string name="folder_path_hint">Folder path</string>
    <string name="edit_folder_title">Edit folder...</string>

    <string name="title_activity_servers">Servers</string>
    <string name="server_name_hint">Server name</string>
    <string name="server_url_hint">Server URL</string>
    <string name="edit_server_title">Edit server...</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
